--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,7 +3,7 @@ name: "MERGE SUBSCRIPTION"
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '30 6 * * *'   # 10:00 Tehran
     
 jobs:
   build:
